# nifti

./: Cargo.toml
src/: header.rs  lib.rs  main.rs
src/header/: auxiliary.rs  datatype.rs  decode.rs  description.rs  dimension.rs  encode.rs  intensity.rs  intent.rs  scale.rs  slice.rs  test.rs  xform.rs
