[package]
name = "nifti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie-factory  = "0.3"
nom             = "7"

[dev-dependencies]
quickcheck          = "1.0"
quickcheck_macros   = "1.0"

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "nifti"
path = "src/lib.rs"
